Templates/Simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: ClusterIP
  selector:
    app: myfirstapplication
  ports:
    - port: 80
      targetPort: 80
